--- a/App/src/index.html
+++ b/App/src/index.html
@@ -31,6 +31,7 @@
   </head>
 
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <app-root></app-root>
   </body>
 </html>
